# uu-methods-ai-research

./: .editorconfig  .gitignore  1b part 3.py  MAIR_Part_1a_text_classification.ipynb  MAIR_Part_1a_text_classification.py  README.md  base_logger.py  baselineRuleBasedSystem.ipynb  baselineRuleBasedSystem.py  baselineRuleBasedSystemWithEval.ipynb  bot.py  bot_notebook.ipynb  bot_notebook.py  df.csv  eval.ipynb  eval.py  keyword_matching_baseline.ipynb  keyword_matching_baseline.py  lib.py  logger.py  lr  main.ipynb  main.py  main_notebook.ipynb  main_notebook.py  mair_part_1a_text_classification.py  majority_class_baseline.ipynb  majority_class_baseline.py  mnb  notebook.ipynb  notebook.py  proper_classifier_models.ipynb  proper_classifier_models.py  pyproject.toml  restaurant.ipynb  restaurant.py  restaurants_chooser.ipynb  test.py  test_input.txt  type_match_ls.py
experiment/: MAIRviz.ipynb  MAIRviz.py  cleaned_up.csv
